# JTLComponentChecker

./: CMakeLists.txt  README.md
data/: armor.csv  booster.csv  capacitor.csv  config  droid.csv  eng.user-patterns  eng.user-words  engine.csv  reactor.csv  shield.csv  weapon.csv
data/config/: bazaar
src/: capture.cpp  capture.h  component.cpp  component.h  help.cpp  help.h  keyboard.cpp  keyboard.h  main.cpp  options.cpp  options.h  overlay.cpp  overlay.h  parse.cpp  parse.h  read.cpp  read.h
